--- a/src/app/pages/user-management/pengajuan-src/create/create-pengajuan-src.component.html
+++ b/src/app/pages/user-management/pengajuan-src/create/create-pengajuan-src.component.html
@@ -9,7 +9,7 @@
       <!-- VERTICAL STEPPER EXAMPLE -->
       <mat-vertical-stepper class="mat-elevation-z4" [linear]="true">
 
-        <!-- <mat-step [stepControl]="verticalStepperStep1">
+        <mat-step [stepControl]="verticalStepperStep1">
 
           <form [formGroup]="verticalStepperStep1">
 
@@ -35,6 +35,7 @@
 
               <mat-form-field fxFlex="100" class="is-light">
                 <mat-select placeholder="Provinsi" formControlName="province_id">
+                  <mat-option *ngFor="let item of listProvinces" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep1.controls['province_id'].hasError('required') && verticalStepperStep1.controls['province_id'].touched ">
@@ -44,6 +45,7 @@
 
               <mat-form-field fxFlex="100" class="is-light">
                 <mat-select placeholder="Kabupaten / Kota" formControlName="city_id">
+                  <mat-option *ngFor="let item of listCities" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep1.controls['city_id'].hasError('required') && verticalStepperStep1.controls['city_id'].touched ">
@@ -53,6 +55,7 @@
 
               <mat-form-field fxFlex="100" class="is-light">
                 <mat-select placeholder="Kecamatan" formControlName="district_id">
+                  <mat-option *ngFor="let item of listDistricts" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep1.controls['district_id'].hasError('required') && verticalStepperStep1.controls['district_id'].touched ">
@@ -77,7 +80,7 @@
 
           </form>
 
-        </mat-step> -->
+        </mat-step>
 
         <mat-step [stepControl]="verticalStepperStep2">
           <form [formGroup]="verticalStepperStep2">
@@ -110,12 +113,14 @@
                   (click)="showList()">
               </mat-form-field>
               <div fxLayout="column" *ngIf="showListProduct">
-                <mat-checkbox fxFlex *ngFor="let item of listProducts" class="example-margin">{{ item }}
+                <mat-checkbox fxFlex *ngFor="let item of listProducts" (click)="addToProducts(item)"
+                  class="example-margin">{{ item }}
                 </mat-checkbox>
               </div>
               <mat-form-field fxFlex="100" class="is-light">
                 <mat-select placeholder="Tahu SRC darimana ?" formControlName="source">
-                  <mat-option *ngFor="let item of listSources" [value]="item">{{item}}</mat-option>
+                  <mat-option *ngFor="let item of listSources" [value]="item">{{item}}
+                  </mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep2.controls['source'].hasError('required') && verticalStepperStep2.controls['source'].touched ">
@@ -151,7 +156,7 @@
               <div class="px-24">
                 <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
                   accept="image/*" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
-                  (fileChange)="changeImage($event)">
+                  (fileChange)="changeImage($event)" *ngIf="!image">
                   <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
                     <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
                     <br>
@@ -159,6 +164,12 @@
                       <strong>Pilih File</strong></span>
                     <span matPrefix>Besar file maksimal 2mb</span>
                   </div>
+                </div>
+                <div fxFlex fxLayout="column" fxLayoutAlign="center center" *ngIf="image" ngfDrop selectable="1"
+                  [(validDrag)]="validComboDrag" [(file)]="files" accept="image/*"
+                  [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
+                  (fileChange)="changeImage($event)">
+                  <img [src]="image" alt="" style="max-height: 280px;max-width: 100%;">
                 </div>
               </div>
             </div>
